fixing scrolling for list and info panel on mobile

--- a/website/hap/public/global.css
+++ b/website/hap/public/global.css
@@ -175,7 +175,7 @@ h1 {
     overflow-y: scroll;
     display: flex;
     flex-direction: column;
-    max-height: calc(100% - var(--hh));
+    /* max-height: calc(100% - var(--hh)); */
     border-bottom: solid 2px rgb(225, 225, 225);
 }
 /* Hide scrollbar for Chrome, Safari and Opera */
@@ -242,9 +242,8 @@ img {
 
 #holder {
     position: relative;
-    /* max-height: inherit; */
     padding: 0px 5px 5px 15px;
-    overflow: auto;
+    overflow-y: scroll;
     flex-grow: 1;
 }
 
@@ -535,11 +534,6 @@ label {
 
 /* Media query for mobile devices */
 @media (max-width: 767px) {
-    header {
-        width: 100%;
-        height: 45px !important;
-
-    }
     .site-filters {
         display: flex;
         flex-direction: column;
